Added navbar, footer, and about projects

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,47 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+ <nav class="navbar navbar-default navbar-expand-sm">
+		&nbsp;
+	</nav>
+
+	<div class="container">
+		<div class="jumbotron">	
+
+				<div class="wrapper">
+					<div class="first">
+						<h1>Kendra Kuivenhoven</h1>
+						<div class="panel-group">
+							<div class="panel panel-primary">
+								<div class="panel-body">
+									Skate-Spot (web app)<br>
+									<p style="font-size: 13px;">Providing users a way to document and rate street skating spots via a web app. Hosted at www.skateapp4all.org, the framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/mobile_skateApp">Skate-Spot web (repo)</a>.</p-small>
+								</div>
+							</div><br>
+
+							<div class="panel panel-primary">
+								<div class="panel-body">
+									Skate-Spot (mobile app)<br>
+									<p style="font-size: 13px;">Limited mobile app version of the existing web app. React Native is the framework used; existing code is located at the mobile_skateApp pinned GitHub repo, here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot mobile (repo)</a>.</p-small>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					<div class="second">
+						<img src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="position: absolute; width: 25%; left: 526px;">
+						<!--img src="http://i65.tinypic.com/2w21usw.jpg" alt="http://i65.tinypic.com/2w21usw.jpg" class="img-thumbnail" style="position: absolute; width: 25%;"-->
+					</div>
+				</div>
+
+		</div>
+	</div>
+
   <body>
     <%= yield %>
   </body>
+
+	<div class="footer navbar-fixed-bottom">
+	</div>
+
 </html>
