--- a/app/assets/stylesheets/basic.scss
+++ b/app/assets/stylesheets/basic.scss
@@ -1,3 +1,32 @@
 // Place all the styles related to the Basic controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.wrapper {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	.list-group {
+		border-color: none;
+	}
+	.list-group-item {
+		color: black;
+		background-color: #e9ecef;
+		border-color: none;
+	}
+}
+
+.first {
+	height: 100%;
+	width: 50%;
+	float: left;
+}
+
+.second {
+	height: 100%;
+	width: 50%;
+	overflow: hidden;
+	
+}
+
