--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,16 +24,24 @@
 								<h5>Active projects:</h5>
 								<div class="panel-body">
 									Skate-Spot (web app)<br>
-									<p style="font-size: 13px;">Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/mobile_skateApp">Skate-Spot web (repo)</a>. The web app is hosted <a href="https://www.skateapp4all.org">here</a>.</p-small>
+									<p style="font-size: 13px;">Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot web (repo)</a>. The web app is hosted <a href="https://www.skateapp4all.org">here</a>.</p-small>
 								</div>
 							</div>
 
 							<div class="panel panel-primary">
 								<div class="panel-body">
 									Skate-Spot (mobile app)<br>
-									<p style="font-size: 13px;">Limited mobile app version of the existing web app. React Native is the framework used; existing code is located at the mobile_skateApp pinned GitHub repo, here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot mobile (repo)</a>.</p-small>
+									<p style="font-size: 13px;">Limited mobile app version of the existing web app. React Native is the framework used; existing code is located at the mobile_skateApp pinned GitHub repo, here: <a href="https://github.com/kkuivenhoven/mobile_skateApp">Skate-Spot mobile (repo)</a>.</p-small>
 								</div>
 							</div>
+
+							<div class="panel panel-primary">
+								<div class="panel-body">
+									Biblical Numerology (web app)<br>
+									<p style="font-size: 13px;">Providing anyone the ability to lookup any Biblical verse complete with numerological interpretations. Users may chat with others in which each user can help foster an environment full of spiritual growth. Existing code is located here: <a href="https://github.com/kkuivenhoven/BibleNumerology">Biblical Numeroloy web (repo)</a>.</p-small>
+								</div>
+							</div>
+
 						</div>
 					</div>
 					
