(fix) fixed image sizing issue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,17 @@
 		<div class="jumbotron">	
 
 				<div class="wrapper">
+							<!--img src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="position: absolute; width: 25%; left: 526px;" align="right"-->
 					<div class="first">
 						<h1>Kendra Kuivenhoven</h1>
 						<p>kendrakvnhvn10@gmail.com</p>
+							<div class="panel panel-primary">
+								<div class="panel-body">
+						<img width="50%"height="auto" src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="-webkit-transform: scaleX(-1); transform: scaleX(-1);"></img>
+								</div>
+							</div>
+
+						</div>
 						<div class="panel-group">
 							<div class="panel panel-primary">
 								<h5>Active projects:</h5>
@@ -42,12 +50,16 @@
 								</div>
 							</div>
 
-						</div>
 					</div>
 					
 					<div class="second">
-						<img src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="position: absolute; width: 25%; left: 526px;">
-						<!--img src="http://i65.tinypic.com/2w21usw.jpg" alt="http://i65.tinypic.com/2w21usw.jpg" class="img-thumbnail" style="position: absolute; width: 25%;"-->
+						<div class="panel-group">
+							<div class="panel panel-primary">
+								<div class="panel-body">
+								</div>
+							</div>
+						</div>
+
 					</div>
 				</div>
 
