(update) updated verbiage for Bible Numerology app info

--- a/app/views/layouts/backup_application.html
+++ b/app/views/layouts/backup_application.html
@@ -16,17 +16,10 @@
 		<div class="jumbotron">	
 
 				<div class="wrapper">
-							<!--img src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="position: absolute; width: 25%; left: 526px;" align="right"-->
+							<img src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="position: absolute; width: 25%; left: 526px;" align="right">
 					<div class="first">
 						<h1>Kendra Kuivenhoven</h1>
 						<p>kendrakvnhvn10@gmail.com</p>
-							<div class="panel panel-primary">
-								<div class="panel-body">
-						<img width="50%"height="auto" src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="-webkit-transform: scaleX(-1); transform: scaleX(-1);"></img>
-								</div>
-							</div>
-
-						</div>
 						<div class="panel-group">
 							<div class="panel panel-primary">
 								<h5>Active projects:</h5>
@@ -46,20 +39,16 @@
 							<div class="panel panel-primary">
 								<div class="panel-body">
 									Biblical Numerology (web app)<br>
-									<p style="font-size: 13px;">Providing anyone the ability to lookup any Biblical verse complete with numerological interpretations. Users may chat with others in which each user can help foster an environment full of spiritual growth. Existing code is located here: <a href="https://github.com/kkuivenhoven/BibleNumerology">Biblical Numeroloy web (repo)</a>. The web app is hosted <a href="https://biblenumerology.herokuapp.com">here</a>.</p-small>
+									<p style="font-size: 13px;">Providing anyone the ability to lookup any Biblical verse complete with numerological interpretations. Users may chat with others in which each user can help foster an environment full of spiritual growth. Existing code is located here: <a href="https://github.com/kkuivenhoven/BibleNumerology">Biblical Numeroloy web (repo)</a>.</p-small>
 								</div>
 							</div>
 
+						</div>
 					</div>
 					
 					<div class="second">
-						<div class="panel-group">
-							<div class="panel panel-primary">
-								<div class="panel-body">
-								</div>
-							</div>
-						</div>
-
+						<!--img src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="position: absolute; width: 25%; left: 526px;"-->
+						<!--img src="http://i65.tinypic.com/2w21usw.jpg" alt="http://i65.tinypic.com/2w21usw.jpg" class="img-thumbnail" style="position: absolute; width: 25%;"-->
 					</div>
 				</div>
 
