(addition) added verbiage about latest project

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,14 @@
 							<div class="panel panel-primary">
 								<div class="panel-body">
 									Biblical Numerology (web app)<br>
-									<p style="font-size: 13px;">Providing anyone the ability to lookup any Biblical verse complete with numerological interpretations. Users may chat with others in which each user can help foster an environment full of spiritual growth. Existing code is located here: <a href="https://github.com/kkuivenhoven/BibleNumerology">Biblical Numeroloy web (repo)</a>. The web app is hosted <a href="https://biblenumerology.herokuapp.com">here</a>.</p-small>
+									<p style="font-size: 13px;">Providing anyone the ability to lookup any Biblical verse complete with numerological interpretations. Users may view charts as well depciting Biblical data from different perspectives to increase spiritual growth. Existing code is located here: <a href="https://github.com/kkuivenhoven/BibleNumerology">Biblical Numeroloy web (repo)</a>. The web app is hosted <a href="https://biblenumerology.herokuapp.com">here</a>.</p-small>
+								</div>
+							</div>
+
+							<div class="panel panel-primary">
+								<div class="panel-body">
+									Herb Data (web app)<br>
+									<p style="font-size: 13px;">This site is for any herb enthusiast that wishes to learn more about the antioxidant levels of the herbs that are available in the data set. From explanations as to what was measured to the average and standard deviations of each measurement type, the user has a plethora of vital information for better selecting herbs high in antioxidants. <a href="https://github.com/kkuivenhoven/SetsOfData">Herb Data web (repo)</a>. The web app is hosted <a href="https://setsofdata.herokuapp.com">here</a>.</p-small>
 								</div>
 							</div>
 
