(verbiage) added verbiage and links to latest project

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,13 @@
 								</div>
 							</div>
 
+							<div class="panel panel-primary">
+								<div class="panel-body">
+									Many Color Schemes (web app)<br>
+									<p style="font-size: 13px;">A web app designed to help out the aspiring artist with a variety of 3-color color schemes complete with hexidecimal color code.<a href="https://github.com/kkuivenhoven/HerbData">Many Color Schemes web (repo)</a>. The web app is hosted <a href="http://manycolorschemes.herokuapp.com">here</a>.</p-small>
+								</div>
+							</div>
+
 					</div>
 					
 					<div class="second">
