--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 								<h5>Active projects:</h5>
 								<div class="panel-body">
 									Skate-Spot (web app)<br>
-									<p style="font-size: 13px;">Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot web (repo)</a>. The web app is hosted <a href="https://www.skateapp4all.org">here</a>.</p-small>
+									<p style="font-size: 13px;">Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot web (repo)</a>. The web app is hosted <a href="https://tranquil-mesa-66470.herokuapp.com">here</a>.</p-small>
 								</div>
 							</div>
 
