--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
 							<div class="panel panel-primary">
 								<div class="panel-body">
 									Many Color Schemes (web app)<br>
-									<p style="font-size: 13px;">A web app designed to help out the aspiring artist with a variety of 3-color color schemes complete with hexidecimal color code.<a href="https://github.com/kkuivenhoven/HerbData">Many Color Schemes web (repo)</a>. The web app is hosted <a href="http://manycolorschemes.herokuapp.com">here</a>.</p-small>
+									<p style="font-size: 13px;">A web app designed to help out the aspiring artist with a variety of 3-color color schemes complete with hexidecimal color code: <a href="https://github.com/kkuivenhoven/HerbData">Many Color Schemes web (repo)</a>. The web app is hosted <a href="http://manycolorschemes.herokuapp.com">here</a>.</p-small>
 								</div>
 							</div>
 
