(feature): added new project to portfolio

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
 							<div class="panel panel-primary">
 								<div class="panel-body">
 						<img width="50%"height="auto" src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="-webkit-transform: scaleX(-1); transform: scaleX(-1);"></img>
+						<!--img width="50%"height="auto" src="http://i68.tinypic.com/21sfpt.jpg" alt="http://i68.tinypic.com/21sfpt.jpg" class="img-thumbnail" style=""></img-->
 								</div>
 							</div>
 
@@ -45,8 +46,15 @@
 
 							<div class="panel panel-primary">
 								<div class="panel-body">
+									Word Recurrence (web app)<br>
+									<p style="font-size: 13px;">Providing users a service such that a user may search for a significant word in the book of Proverbs and learn interesting statistical information about that word, the Oxford Dictionary definition and the number of recurrences of that particular word. The existing code is here: <a href="https://github.com/kkuivenhoven/WordRecurrence">Word Recurrence web (repo)</a>. The web app is hosted <a href="https://bookofproverbs.herokuapp.com">here</a>.</p-small>
+								</div>
+							</div>
+
+							<div class="panel panel-primary">
+								<div class="panel-body">
 									Biblical Numerology (web app)<br>
-									<p style="font-size: 13px;">Providing anyone the ability to lookup any Biblical verse complete with numerological interpretations. Users may view charts as well depciting Biblical data from different perspectives to increase spiritual growth. Existing code is located here: <a href="https://github.com/kkuivenhoven/BibleNumerology">Biblical Numeroloy web (repo)</a>. The web app is hosted <a href="https://biblenumerology.herokuapp.com">here</a>.</p-small>
+									<p style="font-size: 13px;">Providing anyone the ability to lookup any Biblical verse complete with numerological interpretations. Users may view charts as well depicting Biblical data from different perspectives to increase spiritual growth. Existing code is located here: <a href="https://github.com/kkuivenhoven/BibleNumerology">Biblical Numeroloy web (repo)</a>. The web app is hosted <a href="https://biblenumerology.herokuapp.com">here</a>.</p-small>
 								</div>
 							</div>
 
