(feature): added technologies used for each project:

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,8 @@
 						<p>kendrakvnhvn10@gmail.com</p>
 							<div class="panel panel-primary">
 								<div class="panel-body">
-						<img width="50%"height="auto" src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="-webkit-transform: scaleX(-1); transform: scaleX(-1);"></img>
-						<!--img width="50%"height="auto" src="http://i68.tinypic.com/21sfpt.jpg" alt="http://i68.tinypic.com/21sfpt.jpg" class="img-thumbnail" style=""></img-->
+									<img width="50%"height="auto" src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="-webkit-transform: scaleX(-1); transform: scaleX(-1);"></img>
+									<!--img width="50%"height="auto" src="http://i68.tinypic.com/21sfpt.jpg" alt="http://i68.tinypic.com/21sfpt.jpg" class="img-thumbnail" style=""></img-->
 								</div>
 							</div>
 
@@ -32,43 +32,138 @@
 							<div class="panel panel-primary">
 								<h5>Active projects:</h5>
 								<div class="panel-body">
-									Skate-Spot (web app)<br>
-									<p style="font-size: 13px;">Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot web (repo)</a>. The web app is hosted <a href="https://www.skateapp4all.org">here</a>.</p-small>
+									<b>Skate-Spot (web app)</b><br>
+									<p-small style="font-size: 13px;">
+										&nbsp;&nbsp;Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot web (repo)</a>. The web app is hosted <a href="https://www.skateapp4all.org">here</a>.
+										<br>
+									</p-small>
+
+									<p-small style="font-size: 12px;">
+
+										<i>Technologies used:
+										<ul style="padding-left: 40px;">
+											<li>&#8226; Ruby on Rails</li>
+											<li>&#8226; Ruby</li>
+											<li>&#8226; Javascript</li>
+											<li>&#8226; Google Maps API</li>
+											<li>&#8226; Bootstrap</li>
+											<li>&#8226; HTML</li>
+											<li>&#8226; CSS</li>
+										</ul>	
+										</i>
+											
+									</p-small>
 								</div>
 							</div>
 
 							<div class="panel panel-primary">
 								<div class="panel-body">
-									Skate-Spot (mobile app)<br>
-									<p style="font-size: 13px;">Limited mobile app version of the existing web app. React Native is the framework used; existing code is located at the mobile_skateApp pinned GitHub repo, here: <a href="https://github.com/kkuivenhoven/mobile_skateApp">Skate-Spot mobile (repo)</a>.</p-small>
+									<b>Skate-Spot (mobile app)</b><br>
+									<p style="font-size: 13px;">
+										Limited mobile app version of the existing web app. Thus far, users may sign up or login to the mobile app. They also may add a skate spot by address or GPS location. React-Native is the framework used. The existing code is located at the mobile_skateApp pinned GitHub repo, here: <a href="https://github.com/kkuivenhoven/mobile_skateApp">Skate-Spot mobile (repo)</a>.
+									</p-small>
+
+									<p style="font-size: 12px;">
+
+										<i>Technologies used:
+											<ul style="padding-left: 40px; font-size: 12px;">
+												<li>React-Native</li>
+												<li>Javascript</li>
+											</ul>	
+										</i>
+
+									</p-small>
 								</div>
 							</div>
 
 							<div class="panel panel-primary">
 								<div class="panel-body">
-									Word Recurrence (web app)<br>
+									<b>Word Recurrence (web app)</b><br>
 									<p style="font-size: 13px;">Providing users a service such that a user may search for a significant word in the book of Proverbs and learn interesting statistical information about that word, the Oxford Dictionary definition and the number of recurrences of that particular word. The existing code is here: <a href="https://github.com/kkuivenhoven/WordRecurrence">Word Recurrence web (repo)</a>. The web app is hosted <a href="https://bookofproverbs.herokuapp.com">here</a>.</p-small>
+									<p style="font-size: 12px;">
+										<i>Technologies used:
+										<ul style="padding-left: 40px; font-size: 12px;">
+											<li>Ruby on Rails</li>
+											<li>Ruby</li>
+											<li>Oxford Dictionary API</li>
+											<li>ZingCharts</li>
+											<li>Javascript</li>
+											<li>JSON</li>
+											<li>Bootstrap</li>
+											<li>HTML</li>
+											<li>CSS</li>
+										</ul>	
+										</i>
+									</p-small>
 								</div>
 							</div>
 
 							<div class="panel panel-primary">
 								<div class="panel-body">
-									Biblical Numerology (web app)<br>
-									<p style="font-size: 13px;">Providing anyone the ability to lookup any Biblical verse complete with numerological interpretations. Users may view charts as well depicting Biblical data from different perspectives to increase spiritual growth. Existing code is located here: <a href="https://github.com/kkuivenhoven/BibleNumerology">Biblical Numeroloy web (repo)</a>. The web app is hosted <a href="https://biblenumerology.herokuapp.com">here</a>.</p-small>
+									<b>Biblical Numerology (web app)</b><br>
+									<p style="font-size: 13px;">
+										Providing anyone the ability to lookup any Biblical verse complete with numerological interpretations. Users may view charts as well depicting Biblical data from different perspectives to increase spiritual growth. Existing code is located here: <a href="https://github.com/kkuivenhoven/BibleNumerology">Biblical Numeroloy web (repo)</a>. The web app is hosted <a href="https://biblenumerology.herokuapp.com">here</a>.
+									</p-small>
+									<p style="font-size: 12px;">
+										<i>Technologies used:
+										<ul style="padding-left: 40px; font-size: 12px;">
+											<li>Ruby on Rails</li>
+											<li>Ruby</li>
+											<li>D3.js</li>
+											<li>Bible Gateway API</li>
+											<li>JSON</li>
+											<li>Bootstrap</li>
+											<li>HTML</li>
+											<li>CSS</li>
+										</ul>	
+										</i>
+									</p-small>
 								</div>
 							</div>
 
 							<div class="panel panel-primary">
 								<div class="panel-body">
-									Herb Data (web app)<br>
-									<p style="font-size: 13px;">This site is for any herb enthusiast that wishes to learn more about the antioxidant levels of the herbs that are available in the data set. From explanations as to what was measured to the average and standard deviations of each measurement type, the user has a plethora of vital information for better selecting herbs high in antioxidants. <a href="https://github.com/kkuivenhoven/SetsOfData">Herb Data web (repo)</a>. The web app is hosted <a href="https://setsofdata.herokuapp.com">here</a>.</p-small>
+									<b>Herb Data (web app)</b><br>
+									<p style="font-size: 13px;">
+											This site is for any herb enthusiast that wishes to learn more about the antioxidant levels of the herbs that are available in the data set. From explanations as to what was measured to the average and standard deviations of each measurement type, the user has a plethora of vital information for better selecting herbs high in antioxidants. <a href="https://github.com/kkuivenhoven/SetsOfData">Herb Data web (repo)</a>. The web app is hosted <a href="https://setsofdata.herokuapp.com">here</a>.
+									</p-small>
+
+									<p style="font-size: 12px;">
+										<i>Technologies used:
+										<ul style="padding-left: 40px; font-size: 12px;">
+											<li>Ruby on Rails</li>
+											<li>Ruby</li>
+											<li>D3.js</li>
+											<li>Bootstrap</li>
+											<li>JSON</li>
+											<li>HTML</li>
+											<li>CSV</li>
+										</ul>
+										</i>
+									</p-small>
 								</div>
 							</div>
 
 							<div class="panel panel-primary">
 								<div class="panel-body">
-									Many Color Schemes (web app)<br>
-									<p style="font-size: 13px;">A web app designed to help out the aspiring artist with a variety of 3-color color schemes complete with hexidecimal color code: <a href="https://github.com/kkuivenhoven/HerbData">Many Color Schemes web (repo)</a>. The web app is hosted <a href="http://manycolorschemes.herokuapp.com">here</a>.</p-small>
+									<b>Many Color Schemes (web app)</b><br>
+									<p style="font-size: 13px;">
+										A web app designed to help out the aspiring artist with a variety of 3-color color schemes complete with hexidecimal color code: <a href="https://github.com/kkuivenhoven/HerbData">Many Color Schemes web (repo)</a>. The web app is hosted <a href="http://manycolorschemes.herokuapp.com">here</a>.
+									</p-small>
+
+									<p style="font-size: 12px;">
+										<i>Technologies used:
+										<ul style="padding-left: 40px; font-size: 12px;">
+											<li>Ruby on Rails</li>
+											<li>Ruby</li>
+											<li>Bootstrap</li>
+											<li>HTML</li>
+											<li>CSS</li>
+										</ul>
+										</i>
+									</p-small>
+
+
 								</div>
 							</div>
 
