(styling): removed indentation on project bio

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 								<div class="panel-body">
 									<b>Skate-Spot (web app)</b><br>
 									<p-small style="font-size: 13px;">
-										&nbsp;&nbsp;Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot web (repo)</a>. The web app is hosted <a href="https://www.skateapp4all.org">here</a>.
+										Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot web (repo)</a>. The web app is hosted <a href="https://www.skateapp4all.org">here</a>.
 										<br>
 									</p-small>
 
