(feature): adjusted styling and added more descriptive verbiage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,16 +19,22 @@
 							<!--img src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="position: absolute; width: 25%; left: 526px;" align="right"-->
 					<div class="first">
 						<h1>Kendra Kuivenhoven</h1>
-						<p>kendrakvnhvn10@gmail.com</p>
+						<span style="font-size: 16px;">
+							<p-small>
+								&nbsp;&nbsp;&#8226; kendrakvnhvn10@gmail.com<br>
+								&nbsp;&nbsp;&#8226; CSU Chico '18<br>
+								&nbsp;&nbsp;&#8226; Computer Science, Mathematics, Statistics
+							</p-small>
+						</span>
+
+						</div>
+						<div class="panel-group">
 							<div class="panel panel-primary">
 								<div class="panel-body">
 									<img width="50%"height="auto" src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="-webkit-transform: scaleX(-1); transform: scaleX(-1);"></img>
 									<!--img width="50%"height="auto" src="http://i68.tinypic.com/21sfpt.jpg" alt="http://i68.tinypic.com/21sfpt.jpg" class="img-thumbnail" style=""></img-->
 								</div>
 							</div>
-
-						</div>
-						<div class="panel-group">
 							<div class="panel panel-primary">
 								<h5>Active projects:</h5>
 								<div class="panel-body">
@@ -42,36 +48,16 @@
 
 										<i>Technologies used:
 										<ul style="padding-left: 40px;">
-											<li>&#8226; Ruby on Rails</li>
-											<li>&#8226; Ruby</li>
-											<li>&#8226; Javascript</li>
-											<li>&#8226; Google Maps API</li>
-											<li>&#8226; Bootstrap</li>
-											<li>&#8226; HTML</li>
-											<li>&#8226; CSS</li>
+											<li>Ruby on Rails</li>
+											<li>Ruby</li>
+											<li>Javascript</li>
+											<li>Google Maps API</li>
+											<li>Bootstrap</li>
+											<li>HTML</li>
+											<li>CSS</li>
 										</ul>	
 										</i>
 											
-									</p-small>
-								</div>
-							</div>
-
-							<div class="panel panel-primary">
-								<div class="panel-body">
-									<b>Skate-Spot (mobile app)</b><br>
-									<p style="font-size: 13px;">
-										Limited mobile app version of the existing web app. Thus far, users may sign up or login to the mobile app. They also may add a skate spot by address or GPS location. React-Native is the framework used. The existing code is located at the mobile_skateApp pinned GitHub repo, here: <a href="https://github.com/kkuivenhoven/mobile_skateApp">Skate-Spot mobile (repo)</a>.
-									</p-small>
-
-									<p style="font-size: 12px;">
-
-										<i>Technologies used:
-											<ul style="padding-left: 40px; font-size: 12px;">
-												<li>React-Native</li>
-												<li>Javascript</li>
-											</ul>	
-										</i>
-
 									</p-small>
 								</div>
 							</div>
@@ -117,6 +103,26 @@
 											<li>CSS</li>
 										</ul>	
 										</i>
+									</p-small>
+								</div>
+							</div>
+
+							<div class="panel panel-primary">
+								<div class="panel-body">
+									<b>Skate-Spot (mobile app)</b><br>
+									<p style="font-size: 13px;">
+										Limited mobile app version of the existing web app. Thus far, users may sign up or login to the mobile app. They also may add a skate spot by address or GPS location. React-Native is the framework used. The existing code is located at the mobile_skateApp pinned GitHub repo, here: <a href="https://github.com/kkuivenhoven/mobile_skateApp">Skate-Spot mobile (repo)</a>.
+									</p-small>
+
+									<p style="font-size: 12px;">
+
+										<i>Technologies used:
+											<ul style="padding-left: 40px; font-size: 12px;">
+												<li>React-Native</li>
+												<li>Javascript</li>
+											</ul>	
+										</i>
+
 									</p-small>
 								</div>
 							</div>
