(styling): rearranged home page and added verbiage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,10 @@
 						<h1>Kendra Kuivenhoven</h1>
 						<span style="font-size: 16px;">
 							<p-small>
-								&nbsp;&nbsp;&#8226; kendrakvnhvn10@gmail.com<br>
-								&nbsp;&nbsp;&#8226; CSU Chico '18<br>
-								&nbsp;&nbsp;&#8226; Computer Science, Mathematics, Statistics
+								<br>kendrakvnhvn10@gmail.com<br><br>
+								<!--&nbsp;&nbsp;CSU Chico '18<br>
+								&nbsp;&nbsp;Computer Science, Mathematics, Statistics<br>-->
+									Hello, my name is Kendra. I frequently web develop in my spare time. Sometimes, I mobile develop as well. Below are a list of existing projects. Welcome and enjoy!
 							</p-small>
 						</span>
 
