(bug): added missing tech

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,6 +76,7 @@
 											<li>ZingCharts</li>
 											<li>Javascript</li>
 											<li>JSON</li>
+											<li>CSV</li>
 											<li>Bootstrap</li>
 											<li>HTML</li>
 											<li>CSS</li>
