(verbiage): added verbiage of description of photo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 								<br>kendrakvnhvn10@gmail.com<br><br>
 								<!--&nbsp;&nbsp;CSU Chico '18<br>
 								&nbsp;&nbsp;Computer Science, Mathematics, Statistics<br>-->
-									Hello, my name is Kendra. I frequently web develop in my spare time. Sometimes, I mobile develop as well. Below are a list of existing projects. Welcome and enjoy!
+									Hello, my name is Kendra. I frequently web develop in my spare time. Sometimes, I mobile develop as well. Below are a list of existing projects. I used to skateboard a lot, the picture on the right is me doing a shuvit with a front foot catch. Welcome and enjoy!
 							</p-small>
 						</span>
 
