(bug): added API verbiage to reference to chart source

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,8 +73,9 @@
 											<li>Ruby on Rails</li>
 											<li>Ruby</li>
 											<li>Oxford Dictionary API</li>
-											<li>ZingCharts</li>
+											<li>ZingCharts API</li>
 											<li>Javascript</li>
+											<li>RSpec</li>
 											<li>JSON</li>
 											<li>CSV</li>
 											<li>Bootstrap</li>
