--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
 										<ul style="padding-left: 40px; font-size: 12px;">
 											<li>Ruby on Rails</li>
 											<li>Ruby</li>
-											<li>D3.js</li>
+											<li>D3.js API</li>
 											<li>Bible Gateway API</li>
 											<li>JSON</li>
 											<li>Bootstrap</li>
@@ -142,7 +142,7 @@
 										<ul style="padding-left: 40px; font-size: 12px;">
 											<li>Ruby on Rails</li>
 											<li>Ruby</li>
-											<li>D3.js</li>
+											<li>D3.js API</li>
 											<li>Bootstrap</li>
 											<li>JSON</li>
 											<li>HTML</li>
@@ -165,7 +165,7 @@
 										<ul style="padding-left: 40px; font-size: 12px;">
 											<li>Ruby on Rails</li>
 											<li>Ruby</li>
-											<li>D3.js</li>
+											<li>D3.js API</li>
 											<li>Bootstrap</li>
 											<li>HTML</li>
 											<li>CSS</li>
