--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -144,6 +144,7 @@
 											<li>Ruby</li>
 											<li>D3.js API</li>
 											<li>Bootstrap</li>
+											<li>Javascript</li>
 											<li>JSON</li>
 											<li>HTML</li>
 											<li>CSV</li>
