--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AboutKendra</title>
+    <title>About Kendra</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -12,7 +12,9 @@
 		&nbsp;
 	</nav>
 
+<body>
 	<div class="container">
+		<br>
 		<div class="jumbotron">	
 
 				<div class="wrapper">
@@ -24,7 +26,7 @@
 								<br>kendrakvnhvn10@gmail.com<br><br>
 								<!--&nbsp;&nbsp;CSU Chico '18<br>
 								&nbsp;&nbsp;Computer Science, Mathematics, Statistics<br>-->
-									Hello, my name is Kendra. I frequently web develop in my spare time. Sometimes, I mobile develop as well. Below are a list of existing projects. The picture on the right is me doing a shuvit with a front foot catch (I used to skateboard a lot). Welcome and enjoy!
+									Hello, my name is Kendra. I frequently web develop in my spare time. Sometimes, I mobile develop as well. Below are a list of existing projects. The picture on the right is me doing a shuvit with a front foot catch. Welcome and enjoy!
 							</p-small>
 						</span>
 
@@ -37,70 +39,78 @@
 								</div>
 							</div>
 							<div class="panel panel-primary">
-								<h5>Active projects:</h5>
+								<h4>Active projects:</h4>
 								<div class="panel-body">
-									<b>Skate-Spot (web app)</b><br>
-									<p-small style="font-size: 13px;">
-										Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot web (repo)</a>. The web app is hosted <a href="https://www.skateapp4all.org">here</a>.
+
+                  <b style="font-size: 18px;">Word Recurrence (web app)</b><br>
+                  <p style="font-size: 15px;">
+										Providing users a service such that a user may search for a significant word in the book of Proverbs and learn interesting statistical information about that word, the Oxford Dictionary definition and the number of recurrences of that particular word. The existing code is here: <a href="https://github.com/kkuivenhoven/WordRecurrence">Word Recurrence web (repo)</a>. The web app is hosted <a href="https://bookofproverbs.herokuapp.com">here</a>.
 										<br>
 									</p-small>
-
-									<p-small style="font-size: 12px;">
-
-										<i>Technologies used:
-										<ul style="padding-left: 40px;">
+                  <p-small style="font-size: 12px; margin-top: 0px;">
+                    <i>Technologies used:
+                    <ul style="font-size: 12px;">
 											<li>Ruby on Rails</li>
-											<li>Ruby</li>
-											<li>Javascript</li>
-											<li>Google Maps API</li>
-											<li>Bootstrap</li>
-											<li>HTML</li>
-											<li>CSS</li>
-										</ul>	
-										</i>
-											
-									</p-small>
+                      <li>Ruby</li>
+                      <li>Oxford Dictionary API</li>
+                      <li>ZingCharts API</li>
+                      <li>Javascript</li>
+                      <li>RSpec</li>
+                      <li>JSON</li>
+                      <li>CSV</li>
+                      <li>Bootstrap</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                    </ul> 
+                    </i>
+                  </p-small>
+
 								</div>
 							</div>
 
 							<div class="panel panel-primary">
 								<div class="panel-body">
-									<b>Word Recurrence (web app)</b><br>
-									<p style="font-size: 13px;">Providing users a service such that a user may search for a significant word in the book of Proverbs and learn interesting statistical information about that word, the Oxford Dictionary definition and the number of recurrences of that particular word. The existing code is here: <a href="https://github.com/kkuivenhoven/WordRecurrence">Word Recurrence web (repo)</a>. The web app is hosted <a href="https://bookofproverbs.herokuapp.com">here</a>.</p-small>
-									<p style="font-size: 12px;">
-										<i>Technologies used:
-										<ul style="padding-left: 40px; font-size: 12px;">
-											<li>Ruby on Rails</li>
-											<li>Ruby</li>
-											<li>Oxford Dictionary API</li>
-											<li>ZingCharts API</li>
-											<li>Javascript</li>
-											<li>RSpec</li>
-											<li>JSON</li>
-											<li>CSV</li>
-											<li>Bootstrap</li>
-											<li>HTML</li>
-											<li>CSS</li>
-										</ul>	
-										</i>
-									</p-small>
+
+                  <b style="font-size: 18px;">Skate Spot (web app)</b><br>
+                  <p-small style="font-size: 15px;">
+                    Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot web (repo)</a>. The web app is hosted <a href="https://www.skateapp4all.org">here</a>.
+                    <br>
+                  </p-small>
+                  <p-small style="font-size: 12px;">
+                    <i>Technologies used:
+                    <ul style="font-size: 12px;">
+                      <li>Ruby on Rails</li>
+                      <li>Ruby</li>
+                      <li>Javascript</li>
+                      <li>Google Maps API</li>
+                      <li>Bootstrap</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                    </ul> 
+                    </i>
+                  </p-small>
+
+
 								</div>
 							</div>
 
+
 							<div class="panel panel-primary">
 								<div class="panel-body">
-									<b>Biblical Numerology (web app)</b><br>
-									<p style="font-size: 13px;">
+									<b style="font-size: 18px;">Biblical Numerology (web app)</b><br>
+									<p style="font-size: 15px;">
 										Providing anyone the ability to lookup any Biblical verse complete with numerological interpretations. Users may view charts as well depicting Biblical data from different perspectives to increase spiritual growth. Existing code is located here: <a href="https://github.com/kkuivenhoven/BibleNumerology">Biblical Numeroloy web (repo)</a>. The web app is hosted <a href="https://biblenumerology.herokuapp.com">here</a>.
+                    <br>
 									</p-small>
-									<p style="font-size: 12px;">
+									<p-small style="font-size: 12px;">
 										<i>Technologies used:
-										<ul style="padding-left: 40px; font-size: 12px;">
+										<ul style="font-size: 12px; margin-top: 0px;">
 											<li>Ruby on Rails</li>
 											<li>Ruby</li>
 											<li>D3.js API</li>
 											<li>Bible Gateway API</li>
 											<li>JSON</li>
+                      <li>CSV</li>
 											<li>Bootstrap</li>
 											<li>HTML</li>
 											<li>CSS</li>
@@ -110,73 +120,82 @@
 								</div>
 							</div>
 
-							<div class="panel panel-primary">
-								<div class="panel-body">
-									<b>Skate-Spot (mobile app)</b><br>
-									<p style="font-size: 13px;">
-										Limited mobile app version of the existing web app. Thus far, users may sign up or login to the mobile app. They also may add a skate spot by address or GPS location. React-Native is the framework used. The existing code is located at the mobile_skateApp pinned GitHub repo, here: <a href="https://github.com/kkuivenhoven/mobile_skateApp">Skate-Spot mobile (repo)</a>.
-									</p-small>
-
-									<p style="font-size: 12px;">
-
-										<i>Technologies used:
-											<ul style="padding-left: 40px; font-size: 12px;">
-												<li>React-Native</li>
-												<li>Javascript</li>
-											</ul>	
-										</i>
-
-									</p-small>
-								</div>
-							</div>
-
-							<div class="panel panel-primary">
-								<div class="panel-body">
-									<b>Herb Data (web app)</b><br>
-									<p style="font-size: 13px;">
-											This site is for any herb enthusiast that wishes to learn more about the antioxidant levels of the herbs that are available in the data set. From explanations as to what was measured to the average and standard deviations of each measurement type, the user has a plethora of vital information for better selecting herbs high in antioxidants. <a href="https://github.com/kkuivenhoven/SetsOfData">Herb Data web (repo)</a>. The web app is hosted <a href="https://setsofdata.herokuapp.com">here</a>.
-									</p-small>
-
-									<p style="font-size: 12px;">
-										<i>Technologies used:
-										<ul style="padding-left: 40px; font-size: 12px;">
-											<li>Ruby on Rails</li>
-											<li>Ruby</li>
-											<li>D3.js API</li>
-											<li>Bootstrap</li>
-											<li>Javascript</li>
-											<li>JSON</li>
-											<li>HTML</li>
-											<li>CSV</li>
-										</ul>
-										</i>
-									</p-small>
-								</div>
-							</div>
-
-							<div class="panel panel-primary">
-								<div class="panel-body">
-									<b>Many Color Schemes (web app)</b><br>
-									<p style="font-size: 13px;">
-										A web app designed to help out the aspiring artist with a variety of 3-color color schemes complete with hexidecimal color code: <a href="https://github.com/kkuivenhoven/HerbData">Many Color Schemes web (repo)</a>. The web app is hosted <a href="http://manycolorschemes.herokuapp.com">here</a>.
-									</p-small>
-
-									<p style="font-size: 12px;">
-										<i>Technologies used:
-										<ul style="padding-left: 40px; font-size: 12px;">
-											<li>Ruby on Rails</li>
-											<li>Ruby</li>
-											<li>D3.js API</li>
-											<li>Bootstrap</li>
-											<li>HTML</li>
-											<li>CSS</li>
-										</ul>
-										</i>
-									</p-small>
 
 
-								</div>
-							</div>
+              <div class="panel panel-primary">
+                <div class="panel-body">
+
+                  <b style="font-size: 18px;">Many Color Schemes (web app)</b><br>
+                  <p style="font-size: 15px;">
+                    A web app designed to help out the aspiring artist with a variety of 3-color and 5-color color schemes complete with hexidecimal color code: <a href="https://github.com/kkuivenhoven/HerbData">Many Color Schemes web (repo)</a>. The web app is hosted <a href="http://manycolorschemes.herokuapp.com">here</a>.
+                    <br>
+                  </p-small>
+
+                  <p-small style="font-size: 12px;">
+                    <i>Technologies used:
+                    <ul style="padding-left: 40px; font-size: 12px;">
+                      <li>Ruby on Rails</li>
+                      <li>Ruby</li>
+                      <li>D3.js API</li>
+                      <li>Bootstrap</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                    </ul>
+                    </i>
+                  </p-small>
+
+
+                </div>
+              </div>
+
+
+              <div class="panel panel-primary">
+                <div class="panel-body">
+
+                  <b style="font-size: 18px;">Many Color Schemes (web app)</b><br>
+                  <p style="font-size: 15px;">
+                    A web app designed to help out the aspiring artist with a variety of 3-color color schemes complete with hexidecimal color code: <a href="https://github.com/kkuivenhoven/HerbData">Many Color Schemes web (repo)</a>. The web app is hosted <a href="http://manycolorschemes.herokuapp.com">here</a>.
+                    <br>
+                  </p-small>
+
+                  <p-small style="font-size: 12px;">
+                    <i>Technologies used:
+                    <ul style="padding-left: 40px; font-size: 12px;">
+                      <li>Ruby on Rails</li>
+                      <li>Ruby</li>
+                      <li>D3.js API</li>
+                      <li>Bootstrap</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                    </ul>
+                    </i>
+                  </p-small>
+
+
+                </div>
+              </div>
+
+
+              <div class="panel panel-primary">
+                <div class="panel-body">
+                  <b style="font-size: 18px;">Skate-Spot (mobile app)</b><br>
+                  <p style="font-size: 15px;">
+                    Limited mobile app version of the existing web app. Thus far, users may sign up or login to the mobile app. They also may add a skate spot by address or GPS location. React-Native is the framework used. The existing code is located at the mobile_skateApp pinned GitHub repo, here: <a href="https://github.com/kkuivenhoven/mobile_skateApp">Skate-Spot mobile (repo)</a>.
+										<br>
+                  </p-small>
+
+                  <p-small style="font-size: 12px;">
+
+                    <i>Technologies used:
+                      <ul style="padding-left: 40px; font-size: 12px;">
+                        <li>React-Native</li>
+                        <li>Javascript</li>
+                      </ul> 
+                    </i>
+
+                  </p-small>
+                </div>
+              </div>
 
 					</div>
 					
@@ -192,12 +211,15 @@
 				</div>
 
 		</div>
+		<br>
 	</div>
 
-  <body>
-    <%= yield %>
-  </body>
+  <!--body>
+    %= yield %>
+  </body-->
+</body>
 
+<br>
 	<div class="footer navbar-fixed-bottom">
 	</div>
 
