--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 								<br>kendrakvnhvn10@gmail.com<br><br>
 								<!--&nbsp;&nbsp;CSU Chico '18<br>
 								&nbsp;&nbsp;Computer Science, Mathematics, Statistics<br>-->
-									Hello, my name is Kendra. I frequently web develop in my spare time. Sometimes, I mobile develop as well. Below are a list of existing projects. The picture on the right is me doing a shuvit with a front foot catch. Welcome and enjoy!
+									Hello, my name is Kendra. I frequently web develop in my spare time. Sometimes, I mobile develop as well. Below are a list of existing projects. The picture on the right is me doing a shuvit. Welcome and enjoy!
 							</p-small>
 						</span>
 
@@ -34,8 +34,8 @@
 						<div class="panel-group">
 							<div class="panel panel-primary">
 								<div class="panel-body">
-									<img width="50%"height="auto" src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="-webkit-transform: scaleX(-1); transform: scaleX(-1);"></img>
-									<!--img width="50%"height="auto" src="http://i68.tinypic.com/21sfpt.jpg" alt="http://i68.tinypic.com/21sfpt.jpg" class="img-thumbnail" style=""></img-->
+									<!--img width="50%"height="auto" src="http://i64.tinypic.com/33o3z1t.jpg" alt="http://i64.tinypic.com/33o3z1t.jpg" class="img-thumbnail" style="-webkit-transform: scaleX(-1); transform: scaleX(-1);"></img-->
+									<img width="50%"height="auto" src="http://i68.tinypic.com/21sfpt.jpg" alt="http://i68.tinypic.com/21sfpt.jpg" class="img-thumbnail" style=""></img>
 								</div>
 							</div>
 							<div class="panel panel-primary">
