--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
 
                   <b style="font-size: 18px;">Skate Spot (web app)</b><br>
                   <p-small style="font-size: 15px;">
-                    Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate-Spot web (repo)</a>. The web app is hosted <a href="https://www.skateapp4all.org">here</a>.
+                    Providing users a way to document and rate street skating spots via a web app. The framework used is Ruby on Rails, and the Skate-App pinned GitHub repo holds the project code here: <a href="https://github.com/kkuivenhoven/Skate-App">Skate Spot web (repo)</a>. The web app is hosted <a href="https://www.skateapp4all.org">here</a>.
                     <br>
                   </p-small>
                   <p-small style="font-size: 12px;">
