(feature): added Pearson reference for project

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,7 @@
                     <ul style="font-size: 12px;">
 											<li>Ruby on Rails</li>
                       <li>Ruby</li>
+                      <li>Pearson Dictionary API</li>
                       <li>Oxford Dictionary API</li>
                       <li>ZingCharts API</li>
                       <li>Javascript</li>
