(verbiage): adjusted about me section

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,9 @@
 								<br>kendrakvnhvn10@gmail.com<br><br>
 								<!--&nbsp;&nbsp;CSU Chico '18<br>
 								&nbsp;&nbsp;Computer Science, Mathematics, Statistics<br>-->
-									Hello, my name is Kendra. I am interested in a technical position: software development (front end and/or back end) or a quality assurance analyst position. My portfolio lies below this verbiage. I frequently web develop in my spare time. Sometimes, I mobile develop as well. The picture on the right is me doing a shuvit. Welcome and enjoy!
+									Hello, my name is Kendra. 
+									<br>I am interested in a technical position: software development (front end and/or back end) or a quality assurance analyst position. 
+									<br>My portfolio lies below this verbiage. I frequently web develop in my spare time. Sometimes, I mobile develop as well. The picture on the right is me doing a shuvit. Welcome and enjoy!
 							</p-small>
 						</span>
 
