--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,8 @@
 								&nbsp;&nbsp;Computer Science, Mathematics, Statistics<br>-->
 									Hello, my name is Kendra. 
 									<br><br>I am interested in a technical position: software development (front end and/or back end) or a quality assurance analyst position. 
-									<br><br>My portfolio lies below this verbiage. I frequently web develop in my spare time. Sometimes, I mobile develop as well. The picture on the right is me doing a shuvit. Welcome and enjoy!
+									<br><br>My portfolio lies below this verbiage. I frequently web develop in my spare time. Sometimes, I mobile develop as well. 
+									<br><br>The picture on the right is me doing a shuvit. Welcome and enjoy!
 							</p-small>
 						</span>
 
