(verbiage): adjusted about me section

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,13 +23,14 @@
 						<h1>Kendra Kuivenhoven</h1>
 						<span style="font-size: 16px;">
 							<p-small>
-								<br>kendrakvnhvn10@gmail.com<br><br>
+								<br>email: kendrakvnhvn10@gmail.com<br><br>
 								<!--&nbsp;&nbsp;CSU Chico '18<br>
 								&nbsp;&nbsp;Computer Science, Mathematics, Statistics<br>-->
 									Hello, my name is Kendra. 
 									<br><br>I am interested in a technical position: software development (front end and/or back end) or a quality assurance analyst position. 
 									<br><br>My portfolio lies below this verbiage. I frequently web develop in my spare time. Sometimes, I mobile develop as well. 
-									<br><br>The picture on the right is me doing a shuvit. Welcome and enjoy!
+									<br><br>The picture on the right is me doing a shuvit. 
+									<br><br>Welcome and enjoy!
 							</p-small>
 						</span>
 
