--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,9 @@
 								<!--&nbsp;&nbsp;CSU Chico '18<br>
 								&nbsp;&nbsp;Computer Science, Mathematics, Statistics<br>-->
 									Hello, my name is Kendra. 
-									<br><br>I am interested in a technical position: software development (front end and/or back end) or a quality assurance analyst position. 
-									<br><br>My portfolio lies below this verbiage. I frequently web develop in my spare time. Sometimes, I mobile develop as well. 
-									<br><br>The picture on the right is me doing a shuvit. 
+									<br><br>I am seeking a technical position in software development (front end and/or back end) or a quality assurance analyst position. 
+									<br><br>My portfolio is below with links to my projects. Developing web and mobile apps is one of my passions, so I am always creating something new.
+									<br><br>I like the challenge of learning a new language. If your company works with a language that is not on my resume, I am ready to work until I know it.
 									<br><br>Welcome and enjoy!
 							</p-small>
 						</span>
