(bug): missing resume link - fixed with this commit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
 									<br><br>I am seeking a technical position in software development (front end and/or back end) or a quality assurance analyst position. 
 									<br><br>My portfolio is below with links to my projects. Developing web and mobile apps is one of my passions, so I am always creating something new.
 									<br><br>I like the challenge of learning a new language. If your company works with a language that is not on my resume, I am ready to work until I know it.
+									<br><br>Resume: <a href="https://docs.google.com/document/d/1hWh5acj5OFcYbxT26l2BewyVcgwnASD_RIBMRfC3Hqk/edit?usp=sharing">here</a>.
 									<br><br>Welcome and enjoy!
 							</p-small>
 						</span>
