--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
 
                   <b style="font-size: 18px;">Word Recurrence (web app)</b><br>
                   <p style="font-size: 15px;">
-										Providing users a service such that a user may search for a significant word in the book of Proverbs and learn interesting statistical information about that word, the Oxford Dictionary definition and the number of recurrences of that particular word. The existing code is here: <a href="https://github.com/kkuivenhoven/WordRecurrence">Word Recurrence web (repo)</a>. The web app is hosted <a href="https://bookofproverbs.herokuapp.com">here</a>.
+										Providing users a service such that a user may search for a significant word in the book of Proverbs and learn interesting statistical information about that word, the Oxford and Dictionary Definition, the Pearson Dictionary definition, and the number of recurrences of that particular word. The existing code is here: <a href="https://github.com/kkuivenhoven/WordRecurrence">Word Recurrence web (repo)</a>. The web app is hosted <a href="https://bookofproverbs.herokuapp.com">here</a>.
 										<br>
 									</p-small>
                   <p-small style="font-size: 12px; margin-top: 0px;">
