--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -154,6 +154,30 @@
               </div>
 
 
+					<div class="panel panel-primary">		                   
+						<div class="panel-body">		                     
+
+ 									<b style="font-size: 18px">Herb Data (web app)</b><br>		                     
+ 									<p style="font-size: 15px;">		                       
+ 											This site is for any herb enthusiast that wishes to learn more about the antioxidant levels of the herbs that are available in the data set. From explanations as to what was measured to the average and standard deviations of each measurement type, the user has a plethora of vital information for better selecting herbs high in antioxidants. <a href="https://github.com/kkuivenhoven/SetsOfData">Herb Data web (repo)</a>. The web app is hosted <a href="https://setsofdata.herokuapp.com">here</a>.
+ 									</p-small>
+								<p style="font-size: 12px;">		
+ 										<i>Technologies used:		
+ 										<ul style="padding-left: 40px; font-size: 12px;">		
+ 											<li>Ruby on Rails</li>		
+ 											<li>Ruby</li>		
+ 											<li>D3.js API</li>		
+ 											<li>Bootstrap</li>		
+ 											<li>Javascript</li>		
+ 											<li>JSON</li>		
+ 											<li>HTML</li>		
+ 											<li>CSV</li>		
+ 										</ul>		
+ 										</i>		
+ 									</p-small>		
+ 								</div>		
+ 							</div>		
+
               <div class="panel panel-primary">
                 <div class="panel-body">
                   <b style="font-size: 18px;">Skate-Spot (mobile app)</b><br>
