(bug): added missing verbiage for Many Color Schemes proj ref

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -132,7 +132,7 @@
 
                   <b style="font-size: 18px;">Many Color Schemes (web app)</b><br>
                   <p style="font-size: 15px;">
-                    A web app designed to help out the aspiring artist with a variety of 3-color color schemes complete with hexidecimal color code: <a href="https://github.com/kkuivenhoven/HerbData">Many Color Schemes web (repo)</a>. The web app is hosted <a href="http://manycolorschemes.herokuapp.com">here</a>.
+                    A web app designed to help out the aspiring artist with a variety of 3-color and 5-color color schemes complete with hexidecimal color code: <a href="https://github.com/kkuivenhoven/HerbData">Many Color Schemes web (repo)</a>. The web app is hosted <a href="http://manycolorschemes.herokuapp.com">here</a>.
                     <br>
                   </p-small>
 
