--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,9 +31,9 @@
 									<br><br>My portfolio is below with links to my projects. Developing web and mobile apps is one of my passions, so I am always creating something new.
 									<br><br>I like the challenge of learning a new language. If your company works with a language that is not on my resume, I am ready to work until I know it.
 									<br><br>Resume: <a href="https://docs.google.com/document/d/1hWh5acj5OFcYbxT26l2BewyVcgwnASD_RIBMRfC3Hqk/edit?usp=sharing">here</a>.
-									<br><br>LinkedIn: <a href="https://www.linkedin.com/in/kendra-kuivenhoven-4a898237/">here</a>.
-									<br><br>GitHub: <a href="www.github.com/kkuivenhoven">here</a>.
-									<br><br>Stackoverflow: <a href="https://stackoverflow.com/users/story/5479897">here</a>.
+									<br>LinkedIn: <a href="https://www.linkedin.com/in/kendra-kuivenhoven-4a898237/">here</a>.
+									<br>GitHub: <a href="www.github.com/kkuivenhoven">here</a>.
+									<br>Stackoverflow: <a href="https://stackoverflow.com/users/story/5479897">here</a>.
 									<br><br>Welcome and enjoy!
 							</p-small>
 						</span>
