(feature): tore out existing layout and added Schema for projects and added new layout

--- a/app/assets/stylesheets/basic.scss
+++ b/app/assets/stylesheets/basic.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body {
+/*body {
 	background-color: #726A95 !important;
 	// background-color: #c0b3ff !important;
 	color: #0b0b0f;
@@ -52,3 +52,4 @@ body {
 	}
 }
 
+*/
