--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,6 @@
  *= require_self
  */
 @import "bootstrap";
-@import 'nav';
-@import 'basic';
+// @import 'nav';
+// @import 'basic';
+@import 'about';
